# InstaDeck

./: .env.example  .gitignore  InstaDeck.jfif  LLMClient.py  PPTXRenderer.py  README.md  docker-compose.yml  main.py  自动PPT生成项目借鉴分析.md
.github/workflows/: ci.yml
backend/: DocumentParser.py  pyproject.toml
backend/assets/templates/builtin/: default.pptx
backend/instadeck/: __init__.py  bootstrap.py  config.py  image_preprocess.py  lint_presentation.py  llm_vendors.py  main.py  outline_llm.py  parser_service.py  render_gate.py  renderer.py  research_service.py  schemas.py  settings_store.py  stock_images.py  style_reference.py  templates_service.py
backend/instadeck/prompts/: outline_system_v1.txt
backend/tests/: conftest.py  test_api.py  test_llm_resolve.py  test_outline_prompt_format.py  test_preprocess.py  test_settings_merge.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Home.tsx  Settings.tsx
scripts/: install.ps1  install.sh
